--- a/style.css
+++ b/style.css
@@ -124,11 +124,54 @@ h1 {
 .required {
   border: 2px solid red;
 }
-
+.highscore-btn {
+  margin-left: 20px;
+  background-color: crimson;
+  color: white;
+  border: none;
+  transition: 0.2s ease-in;
+}
+.highscore-btn:hover {
+  background-color: tomato;
+  cursor: pointer;
+}
+.close-highscore {
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  top: 0;
+  right: 35%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  transition: 0.2s ease;
+}
+.close-highscore:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
+.close-highscore .line {
+  height: 3px;
+  width: 100%;
+  background-color: teal;
+}
+.line.line--1 {
+  transform: rotate(45deg) translateY(3px);
+}
+.line.line--2 {
+  transform: rotate(-45deg) translate(4px, -7px);
+}
 .highscore-wrap {
   text-align: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: 0.2s ease;
+  position: relative;
 }
-
+.isActive-highscore {
+  opacity: 1;
+  pointer-events: all;
+}
 .highscore-wrap .title {
   font-size: 30px;
   text-decoration: underline;
