--- a/style.css
+++ b/style.css
@@ -102,7 +102,8 @@ h1 {
   align-items: center;
 }
 .name-form label {
-  font-size: 20px;
+  font-weight: bold;
+  font-size: 24px;
   margin-right: 5px;
 }
 .name-form #name {
