--- a/style.css
+++ b/style.css
@@ -109,6 +109,8 @@ h1 {
 .name-form #name {
   height: 25px;
   text-transform: capitalize;
+  caret-color: orange;
+  font-size: 16px;
 }
 .name-form #name:focus {
   outline: thin;
